--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16.14-alpine
 WORKDIR /back-end
 EXPOSE 3001
-COPY package*.json back-end/
+COPY back-end/package*.json 
 RUN npm install
 COPY . .
 ENTRYPOINT ["npm", "run"]
